src/layout/page.scss
@import '../components/common';

.roundGatsbyPicture {

  border-radius: 1000px;
  margin: auto;

  img {
    border-radius: 1000px;

  }
  span {
    border-radius: 1000px;

  }
}

.Page {

  a {
    @include themedTagA();
  }

  .gatsby-resp-image-link {
    border: none;
    &:hover {
      border: none;
      background-color: inherit;
      cursor: inherit;
    }
  }

  background-color: $backgroundColorForText;
  display: flex;
  justify-content: center;

  p {
    margin-left: 0;
    margin-right: 0;
    margin-bottom: 15px;
    margin-top: 0;
  }

  .card {

    @include breakpoint(normal) {
      width: 50rem;
    }
    @include breakpoint(small) {
      min-width: 90vw;
    }

    .cover {
      height: 30em;
      background-repeat: no-repeat;
      background-size: cover;
      background-position: center center;

      .title {
        height: 100%;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        color: white;
        font-size: 2em;
        text-align: center;

        span {
          background-color: rgba(0, 0, 0, 0.7);
          box-decoration-break: clone;
          padding: 0.4em;
          margin: 0.4em;
        }
      }

      hr {
        $color: white;
        background-color: $color;
        border-color: $color;
        height: 1px;
        margin-top: 0.5em;
        margin-bottom: 0.5em;
        width: 3em;
        display: flex;
        align-self: center;
        flex-direction: column;
      }
    }
  }

  .article {
    padding: 2em;

    @include breakpoint(small) {
      padding-left: 0.4em;
      padding-right: 0.4em;
      padding-top: 2em;
      padding-bottom: 2em;
    }
  }

  .meta {
    text-align: center;
  }

  .header {
    display: flex;
    flex-direction: column;
    margin-bottom: 2em;
    text-align: center;
  }

  .content {
    text-align: justify;

    p {
      @include breakpoint(small) {
        padding: 0.4em;
      }

    }
  }
  .content-header-wrapper {
    border: solid 1px dimgray;
    border-top: 0;
  }

  $header-padding: 2em;
  .site-header {
    background-color: rgb(230, 230, 230);
    border-top: 0;
    padding-top: 2em;
    padding-bottom: $header-padding;
    margin-bottom: $header-padding;
  }

  .page-content {
    min-height: 65vh;
    padding-bottom: 5em;
  }

  hr {
    $color: $blackLink;
    background-color: $color;
    border-color: $color;
    height: 1px;
    margin-top: 1em;
    margin-bottom: 1em;
    width: 250px;
    display: flex;
    align-self: center;
    flex-direction: column;
  }

  ul {
   // padding: 0;

  }

  h1 {
    font-size: 2.4em;
    font-weight: 400;
  }
  h2 {
    font-size: 1.8em;
    font-weight: 400;
  }
  h3 {
    font-size: 1.5em;
    font-weight: 400;
  }
  h4 {
    font-size: 1.3em;
    font-weight: 600;
    margin-bottom: 0.4em;
  }
  h5 {
    margin: 0;
  }
  h6 {
    margin: 0;
  }

  ul {
    color: rgb(50, 50, 50);
   // list-style-type: none;
    font-size: 1rem;
    padding-left: 1rem;

    li {
      padding-top: 0.2rem;
      padding-bottom: 0.2rem;
    }
  }
}

.coverBand {

  text-align: center;
  transition: opacity 1.5s ease;
  font-weight: 600;
  color: white;
  border-radius: 4px;
  margin: 0 auto;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;

  .overlay {

    //background-color: rgba(45, 45, 45, 1);
    @include breakpoint(normal) {
      padding: 7rem;
    }
    @include breakpoint(small) {
      padding: 4rem;
      padding-left: 1rem;
      padding-right: 1rem;
    }

    &Smaller {
      @include breakpoint(normal) {
        padding: 7rem;
      }
      @include breakpoint(small) {
        padding: 3rem;
      }
    }

    .punchline {
      animation: fadein 1s;
      font-size: 4rem;
      @include breakpoint(small) {
        font-size: 3rem;
      }
      padding-bottom: 1rem;
      color: rgb(50, 50, 50);
    }

    .subtext {
      display: flex;
      flex-direction: row;
      @include breakpoint(small) {
        flex-direction: column;
        font-size: 1.4rem;
      }
      justify-content: center;
      animation: fadein 1s;
      font-size: 1.6rem;
      font-weight: 400;
      line-height: 1.8em;
      color: rgb(30, 30, 30);

      p {
        padding-left: 1rem;
        padding-right: 1rem;
        margin: 0;
      }
    }
  }
}

